src/objects/CyberSource_API__mdt.object
<CustomObject>
    <description>Stores settings and keys for Cybersource</description>
    <fields>
        <fullName>CurrencyIsoCode__c</fullName>
        <label>CurrencyIsoCode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CAD</fullName>
                    <default>true</default>
                    <label>CAD</label>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enviornment__c</fullName>
        <label>Enviornment</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dev</fullName>
                    <default>true</default>
                    <label>Dev</label>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>Prod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>endPoint__c</fullName>
        <label>endPoint</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>host__c</fullName>
        <label>host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>keyid__c</fullName>
        <label>keyid</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>merchant_id__c</fullName>
        <description>merchant_id</description>
        <label>merchant id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>profile_id__c</fullName>
        <label>profile_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reqBody__c</fullName>
        <label>reqBody</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>secretKey__c</fullName>
        <label>secretKey</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CyberSource API</label>
    <listViews>
        <fullName>Cybersoure_API_Details</fullName>
        <columns>MasterLabel</columns>
        <columns>CurrencyIsoCode__c</columns>
        <columns>DeveloperName</columns>
        <columns>Enviornment__c</columns>
        <columns>endPoint__c</columns>
        <columns>keyid__c</columns>
        <columns>secretKey__c</columns>
        <columns>profile_id__c</columns>
        <columns>merchant_id__c</columns>
        <filterScope>Everything</filterScope>
        <label>Cybersoure API Details</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>CyberSource API</pluralLabel>
</CustomObject>